remove unnecessary code

--- a/src/index.html
+++ b/src/index.html
@@ -7,31 +7,26 @@
       name="viewport"
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
-    <title>$TITLE</title>
+    <title>BeGrateful Tube</title>
     <link rel="icon" type="image/png" href="assets/img/favicon.png" />
-    <meta name="title" content="$TITLE" />
-    <meta name="description" content="$DESCRIPTION" />
-    <meta name="keywords" content="$OG_META_KEYWORDS" />
-    <meta name="metaDescription" content="$OG_META_DESCRIPTION" />
-    <meta name="metaKeywords" content="$OG_META_KEYWORDS" />
-    <meta property="og:title" content="$OG_TITLE" />
-    <meta property="og:description" content="$OG_DESCRIPTION" />
-    <meta property="og:site_name" content="$OG_SITE" />
-    <meta property="og:url" content="$OG_URL" />
+    <meta name="title" content="Be Grateful Tube" />
+    <meta name="description" content="Be Grateful Tube" />
+    <meta name="keywords" content="begratefulTube" />
+    <meta name="metaDescription" content="begrateful" />
+    <meta property="og:title" content="Be Grateful Tube" />
+    <meta property="og:description" content="Be Grateful Tube" />
+    <meta property="og:site_name" content="Be Grateful Tube" />
+    <meta property="og:url" content="https://begrateful.tube" />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="$OG_IMAGE" />
+    <meta property="og:image" content="/assets/begratefultube-logo.png" />
     <meta property="og:image:width" content="600" />
     <meta property="og:image:height" content="95" />
-    <meta name="twitter:card" content="summary_large_image"/>
-    <meta name="twitter:site" content="$OG_SITE" />
-    <meta name="twitter:title" content="$OG_TITLE" />
-    <meta property="twitter:image" content="$OG_IMAGE" />
-    <meta name="twitter:description" content="$OG_DESCRIPTION" />
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:site" content="https://begrateful.tube" />
+    <meta name="twitter:title" content="Be Grateful Tube" />
+    <meta property="twitter:image" content="/assets/begratefultube-logo.png" />
+    <meta name="twitter:description" content="Be Grateful Tube" />
     <base href="/" />
-    <script
-      type="text/javascript"
-      src="https://cdn.jwplayer.com/libraries/JPyzCeMq.js"
-    ></script>
   </head>
   <style>
     .splash-screen {
