--- a/src/index.html
+++ b/src/index.html
@@ -18,13 +18,13 @@
     <meta property="og:site_name" content="Be Grateful Tube" />
     <meta property="og:url" content="https://begrateful.tube" />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="/assets/begratefultube-logo.png" />
+    <meta property="og:image" content="https://begrateful.tube/assets/meta.png" />
     <meta property="og:image:width" content="600" />
     <meta property="og:image:height" content="95" />
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="https://begrateful.tube" />
     <meta name="twitter:title" content="Be Grateful Tube" />
-    <meta property="twitter:image" content="/assets/begratefultube-logo.png" />
+    <meta property="twitter:image" content="https://begrateful.tube/assets/meta.png" />
     <meta name="twitter:description" content="Be Grateful Tube" />
     <base href="/" />
   </head>
