Change meta description

--- a/src/index.html
+++ b/src/index.html
@@ -10,11 +10,11 @@
     <title>BeGrateful Tube</title>
     <link rel="icon" type="image/png" href="assets/img/favicon.png" />
     <meta name="title" content="Be Grateful Tube" />
-    <meta name="description" content="Be Grateful Tube" />
+    <meta name="description" content="Real Solutions To Implement Today To Live Healthy And Live Free" />
     <meta name="keywords" content="begratefulTube" />
     <meta name="metaDescription" content="begrateful" />
     <meta property="og:title" content="Be Grateful Tube" />
-    <meta property="og:description" content="Be Grateful Tube" />
+    <meta property="og:description" content="Real Solutions To Implement Today To Live Healthy And Live Free" />
     <meta property="og:site_name" content="Be Grateful Tube" />
     <meta property="og:url" content="https://begrateful.tube" />
     <meta property="og:type" content="website" />
@@ -25,7 +25,7 @@
     <meta name="twitter:site" content="https://begrateful.tube" />
     <meta name="twitter:title" content="Be Grateful Tube" />
     <meta property="twitter:image" content="https://begrateful.tube/assets/meta.png" />
-    <meta name="twitter:description" content="Be Grateful Tube" />
+    <meta name="twitter:description" content="Real Solutions To Implement Today To Live Healthy And Live Free" />
     <base href="/" />
   </head>
   <style>
